Fix layout collapse on SP

--- a/src/styles/_layout_sp.scss
+++ b/src/styles/_layout_sp.scss
@@ -50,16 +50,6 @@
     }
   }
 
-  .entrybutton {
-    margin: 10px auto 80px;
-    padding: 10px;
-    text-align: center;
-    a {
-      display: box;
-      padding: 10px;
-      border: 1px solid;
-    }
-  }
   .hdg {
     //h2
     &__lv2 {
